--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tumblr-likes-downloader",
   "version": "0.0.1",
   "dependencies": {
-    "mt-files-downloader": "^0.2.5",
+    "got": "^6.7.1",
     "tumblr.js": "^1.1.1"
   }
 }
