Update: timeout and retry for image downloads.
Signed-off-by: gonejack <igonejack@gmail.com>

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "got": "^6.7.1",
+    "md5-file": "^4.0.0",
+    "trash": "^4.3.0",
     "tumblr.js": "^1.1.1"
   }
 }
